# marker_rviz_plugin

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
include/display_marker_detection/: display_marker_detection.h  visual_marker_detection.h
include/marker_detection/: marker_detection_display.h  marker_detection_visual.h
include/marker_with_covariance/: marker_with_covariance_display.h  marker_with_covariance_visual.h
include/marker_with_covariance_array/: marker_with_covariance_array_display.h  marker_with_covariance_array_visual.h
include/ogre_visuals/: marker.h  marker_with_covariance.h
media/textures/: marker_icon.xcf
ogre_media/textures/: marker_icon.xcf
rviz/: demo_config.rviz
scripts/: send_demo_msgs.py
src/display_marker_detection/: display_marker_detection.cpp  visual_marker_detection.cpp
src/marker_detection/: marker_detection_display.cpp  marker_detection_visual.cpp
src/marker_with_covariance/: marker_with_covariance_display.cpp  marker_with_covariance_visual.cpp
src/marker_with_covariance_array/: marker_with_covariance_array_display.cpp  marker_with_covariance_array_visual.cpp
src/ogre_visuals/: marker.cpp  marker_with_covariance.cpp
