<package>
  <name>marker_rviz_plugin</name>
  <version>0.0.0</version>
  <description>The marker_rviz_plugin package contains RViz plugins to visualize messages of the marker_msgs package using RViz.</description>
  <maintainer email="markus.macsek@student.tuwien.ac.at">Markus Macsek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>marker_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>marker_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
