<package>
  <name>marker_rviz_plugin</name>
  <version>0.0.2</version>
  <description>The marker_rviz_plugin package contains RViz plugins to visualize messages of the marker_msgs package using RViz.</description>
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/marker_rviz_plugin</url>
  <author>Markus Bader</author>
  <author>Lukas Pfeifhofer</author>
  <author>Markus Macsek</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>marker_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>marker_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
